--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -20,19 +20,21 @@
     overflow: hidden;
 
     .about__bio {
+      max-inline-size: 100vmin;
       inline-size: 80%;
       text-align: center;
 
       .text-secondary {
         color: $yellow;
-        font-size: 6vmin;
+        font-size: 5vmin;
         padding-block-end: 1rem;
         opacity: 0;
         transform: translateX(-7rem);
         animation: clear 1s forwards;
       }
       p {
-        font-size: 4vmin;
+        font-size: 100%;
+        line-height: 1.5;
         margin-block-end: 2rem;
         text-align: justify;
         text-align-last: center;
@@ -44,13 +46,12 @@
     .header-cue {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       gap: 1rem;
       padding-inline: 0.5rem;
       padding-block: 0.5rem 0;
       text-align: center;
       position: absolute;
-      bottom: 25vmin;
+      bottom: 24vmin;
       z-index: 1;
       transform: translateY(5rem);
       overflow: hidden;
