--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -100,8 +100,8 @@ html {
     }
   }
 }
-@mixin gradient-flow {
-  @keyframes gradient-flow {
+@mixin flow-diognal {
+  @keyframes flow-diognal {
     0% {
       background-position: 0% 50%;
     }
@@ -110,6 +110,19 @@ html {
     }
     100% {
       background-position: 0% 50%;
+    }
+  }
+}
+@mixin flow-vertical {
+  @keyframes flow-vertical {
+    0% {
+      background-position: 50% 0%;
+    }
+    50% {
+      background-position: 50% 50%;
+    }
+    100% {
+      background-position: 50% 0%;
     }
   }
 }
