--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,121 +1,172 @@
 /* PROJECT SECTION 
 --------------------------------*/
 .projects {
-  padding-bottom: 15vh;
+  padding-block-end: 15vh;
   transition: all 0.5s 0.3s ease-in-out;
+  display: grid;
 
-  &__bio-image {
+  &__header {
     position: relative;
-    inline-size: 100%;
-    block-size: 30vh;
+    max-inline-size: 100%;
+    inline-size: 80%;
+    margin: 15vw auto 0;
+    block-size: 20vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
-    border-radius: 0% 0% 90% 90%;
-    // animation: radiant 2s 1.5s infinite;
-
-    &::before {
-      content: "";
-      position: absolute;
-      // inset: 0 0 0 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background: url(../img/folaa.jpg) center center/cover;
-      transform: translateY(300px) scale(1.2);
-      opacity: 0;
-      animation: clear 1.5s forwards;
-    }
+    row-gap: 2rem;
 
     .text-secondary {
-      position: relative;
+      // position: relative;
       font-size: 2rem;
-      color: #fff;
-    //   margin-block-end: 2rem;
+      color: $light-color;
       opacity: 0;
       transform: translateX(-7rem);
       animation: clear 2s forwards;
+    }
+    p {
+      text-align: justify;
+      line-height: 1.5;
+      opacity: 0;
+      transform: translateY(-1rem) scale(1.2);
+      color: lighten($color: $primary-color, $amount: 40%);
+      animation: clear 0.5s 1s forwards;
     }
   }
 
   &__items {
     inline-size: 60vw;
     display: grid;
-    grid-template-columns: 1fr;
-    /* Recomended for future
-              grid-template-columns: repeat(auto-fit, minmax(calc(min(10rem, 100%)), 1fr));
-            */
-    grid-gap: 2rem;
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(calc(min(12rem, 100%)), 1fr)
+    );
+    gap: 2rem;
     margin: 2rem auto 0;
   }
 
   &__item {
     position: relative;
-    border-bottom: 5px solid $secondary-color;
+    background: linear-gradient(
+        90deg,
+        rgba($primary-color, 0.5) 5%,
+        rgba($primary-color, 0) 25%
+      ),
+      linear-gradient(
+        270deg,
+        rgba($primary-color, 0.5) 5%,
+        rgba($primary-color, 0) 20%
+      );
+    box-shadow: 10px 5px lighten($color: $primary-color, $amount: 3%);
     overflow: hidden;
     cursor: pointer;
 
-    img {
+    &__header {
+      position: relative;
+      z-index: 1;
       inline-size: 100%;
+      block-size: 20px;
+      padding-inline-start: 0.8rem;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 0.3rem;
+      background: darken($color: $light-color, $amount: 10%);
+      span {
+        inline-size: 12px;
+        block-size: 12px;
+        border-radius: 50%;
+      }
+      span:last-child {
+        inline-size: auto;
+        font-family: $project-font;
+        align-self: center;
+        font-size: 1rem;
+        margin-left: calc(20% - 20px);
+        color: lighten($primary-color, 30%);
+      }
+      &--red {
+        background: rgba($red, 0.7);
+      }
+      &--yellow {
+        background: rgba($yellow, 0.8);
+      }
+      &--green {
+        background: rgba($green, 0.8);
+      }
     }
 
-    &::after {
+    img {
+      inline-size: 100%;
+      position: relative;
+      z-index: -1;
+    }
+
+    &::before {
       content: "";
       position: absolute;
-      top: 100%;
+      top: 0;
+      right: 0;
+      bottom: 100%;
       left: 0;
-      inline-size: 100%;
-      block-size: 100%;
-      opacity: 0;
-      background: $secondary-color;
-      @include transition-ease;
+      // background: linear-gradient(
+      //   0deg,
+      //   rgba($primary-color, 0) 0,
+      //   rgba($primary-color, 0.9) 80%
+      // );
+      background: linear-gradient(
+        to bottom rgba($primary-color, 0),
+        rgba($primary-color, 0.9)
+        );
+      background-size: cover;
+      background-position: 100% 100%;
+      transition: all 0.5s ease;
     }
 
     &:hover {
-      &::after {
-        top: 0;
-        opacity: 0.9;
+      &::before {
+        bottom: 0;
       }
       .projects__btn {
-        opacity: 1;
+        // bottom: 50%;
+        transform: translate(-50%, 50%) scaleY(1);
       }
     }
-  }
-
-  &__btns {
-    position: absolute;
-    top: 0;
-    z-index: 1;
-    inline-size: 100%;
-    block-size: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    justify-content: center;
-    text-align: center;
   }
 
   &__btn {
-    opacity: 0;
-    color: set-text-color($secondary-color);
-    @include transition-ease;
-
-    &:hover {
-      color: set-text-color(set-text-color($secondary-color));
+    display: inline-block;
+    font-family: $project-font;
+    padding: 10px;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    text-transform: uppercase;
+    background: lighten($primary-color, 30%);
+    border-radius: 5px;
+    box-shadow: 2px 2px lighten($primary-color, 20%);
+    transform: translate(-50%, 50%) scaleY(0);
+    transform-origin: 100% 0;
+    transition: all 0.5s 0.3s ease-in;
+    & > a {
+      color: darken($color: $light-color, $amount: 30%);
+      &:hover {
+        color: $light-color;
+        text-decoration: underline;
+      }
     }
   }
 
   .social-icons {
     display: none;
-    flex-direction: column;
+    // flex-direction: column;
   }
 
   footer {
     display: none;
-    transform: rotate(90deg) translate(-3rem, -5rem);
+    // transform: rotate(90deg) translate(-3rem, -5rem);
   }
 }
 
