--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap');
 @import "config";
 @import "home";
 @import "menu";
@@ -76,4 +75,5 @@ footer {
 }
 .d-none {
     display: none;
+    @include transition-ease;
 }
