Adding flib-box effect when toggling between sections

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -52,6 +52,10 @@
         display: block;
         inline-size: 100%;
         block-size: 100%;
+        &:active {
+          transform: rotate(270deg);
+          transition: all 0.5s ease;
+        }
       }
     }
   }
