--- a/root/css/main.css
+++ b/root/css/main.css
@@ -29,8 +29,6 @@ html {
 /* HOME SECTION 
 -----------------------------*/
 .home {
-  -webkit-transition: all 0.5s 0.3s ease-in-out;
-  transition: all 0.5s 0.3s ease-in-out;
   height: 100%;
   -webkit-padding-before: 35vh;
           padding-block-start: 35vh;
@@ -183,6 +181,13 @@ html {
   display: block;
   inline-size: 100%;
   block-size: 100%;
+}
+
+.nav .menu-nav__link i:active {
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .nav .sc-nav-indicator {
@@ -695,8 +700,6 @@ html {
 /* HOME SECTION 
 -----------------------------*/
 .contact {
-  -webkit-transition: all 0.5s 0.3s ease-in-out;
-  transition: all 0.5s 0.3s ease-in-out;
   height: 100%;
   padding-top: 35vh;
   overflow: hidden;
@@ -1133,9 +1136,29 @@ header {
   padding: 1rem;
 }
 
-main {
+.flip-box {
+  overflow-x: hidden;
   height: 100%;
   width: 100%;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+}
+
+.flip-box__inner {
+  position: relative;
+  inline-size: 100%;
+  block-size: 100%;
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+.flip-horizonal {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 main.navigation {
@@ -1179,6 +1202,4 @@ footer {
 
 .d-none {
   display: none;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
 }
