--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,9 +34,21 @@ header {
     padding: 1rem;
 }
 
-main {
+.flip-box { // <main />
+    overflow-x: hidden;
     height: 100%;
-    width: 100%;    
+    width: 100%;   
+    perspective: 1000px; // 3D effect
+    &__inner {
+        position: relative;
+        inline-size: 100%;
+        block-size: 100%;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+}
+.flip-horizonal {
+    transform: rotateY(180deg);
 }
 
 main.navigation {
@@ -75,5 +87,4 @@ footer {
 }
 .d-none {
     display: none;
-    @include transition-ease;
 }
