--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,6 +1,7 @@
 /* HOME SECTION 
 -----------------------------*/
 .home {
+  transition: all 0.5s 0.3s ease-in-out;
   height: 100%;
   padding-block-start: 35vh;
   overflow: hidden;
