--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,8 +1,9 @@
 /* HOME SECTION 
 -----------------------------*/
 .contact {
-  height: 100%;
-  padding-top: 35vh;
+  transition: all 0.5s 0.3s ease-in-out;
+  block-size: 100%;
+  padding-block-start: 35vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
