--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,8 +1,8 @@
 /* PROJECT SECTION 
 --------------------------------*/
 .projects {
-  padding-block-end: 15vh;
   transition: all 0.5s 0.3s ease-in-out;
+  padding-block-end: 15vh;
   display: grid;
 
   &__header {
@@ -100,6 +100,7 @@
 
     img {
       inline-size: 100%;
+      block-size: 100%;
       position: relative;
       z-index: -1;
     }
