--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Castoro&family=Oswald&display=swap');
 /* GENERAL STYLE
 ------------------------------ */
 $primary-color: #272727;
@@ -11,6 +11,8 @@ $green: #00ff00;
 $light-color: hsl(0, 0%, 100%);
 // $body-font: ;
 $project-font: "Kirang Haerang", cursive;
+$ff-details-1: 'Castoro', serif;
+$ff-detials-2: 'Oswald', sans-serif;
 @mixin vendor-prefix($name, $value...) {
   @each $vendor in ("-webkit-", "-moz-", "-ms-", "-o-", "") {
     #{$vendo}-#{$name}: #{$value};
@@ -154,6 +156,16 @@ html {
     to {
       opacity: 1;
       transform: translate(-50%, -50%) rotate(-45deg);
+    }
+  }
+}
+@mixin fade {
+  @keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+    to {
+      opacity: 1;
     }
   }
 }
