--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -16,17 +16,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 2rem;
+    gap: 2rem;
 
     .text-secondary {
-      // position: relative;
+      flex: 0 0 calc(33% - 1rem);
       font-size: 2rem;
       color: $light-color;
       opacity: 0;
       transform: translateX(-7rem);
+
       animation: clear 2s forwards;
     }
     p {
+      flex: 0 0 calc(33% - 1rem);
       text-align: justify;
       line-height: 1.5;
       opacity: 0;
